Refd #685 - Fixed font style and weight and removed space between main section and footer on small screens

--- a/static/css/pages/installed-v2.css
+++ b/static/css/pages/installed-v2.css
@@ -17,6 +17,11 @@ body {
 
 svg { max-width: 100%; }
 
+@media (max-width: 991px)
+{
+  #content { padding-bottom: 0; }
+}
+
 .content { font-size: 22px; }
 
 .content h1,
